<resources>
    <string name="app_name">SearchVOCA</string>

    <string name="error_overflow_word_count">단어의 개수를 초과하였습니다. 단어수를 줄여주세요</string>
    <string name="error_wrong_answer">오답이무니다</string>
    <string name="error_network">네트워크 확인핫세요</string>
    <string name="error_access_denied">네트워크 확인핫세요</string>
    <string name="error_no_result">검색결과가 없어요</string>
    <string name="error_unknown">네트워크 확인핫세요</string>
    <string name="error_input_field_empty">입력을 핫세요</string>

    <string name="message_quit_test">테스트를 종료하시겠습니까?</string>
    <string name="message_listening_test">단어를 듣고 철자를 입력해주세요!</string>
    <string name="message_permission">검색을 이용하기 위해서는 권한이 필요해요! 어쩌구저쩌구 권한을 허용해주세여~</string>

    <string name="format_count">%1$d개</string>
    <string name="format_card_count">%1$d %2$d</string>

    <string name="title_choice_definition">뜻을 선택해주세요.</string>

    <string name="confirm">확인</string>
    <string name="next">다음</string>
    <string name="correct">정답</string>
    <string name="wrong">오답</string>
    <string name="all">전체</string>
    <string name="retry">다시하기</string>
    <string name="add_word">단어 추가</string>
    <string name="word">단어</string>
    <string name="meaning">뜻 (직접 입력)</string>
    <string name="choice_vocabulary">단어장 선택</string>
    <string name="vocabulary_name_require">단어장명 (필수)</string>
    <string name="explaining">설명</string>
    <string name="vocabulary">단어장</string>
    <string name="difficulty">난이도</string>
    <string name="problem_count">문제 수</string>
    <string name="difficult">어려움</string>
    <string name="medium">보통</string>
    <string name="easy">쉬움</string>
    <string name="cancel">취소</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="word_card">단어 카드</string>
    <string name="wrong_answer_note">오답노트</string>
    <string name="input_your_answer">정답을 입력하세요.</string>
    <string name="listening_test">듣기 테스트</string>
    <string name="do_not_know">잘 모르겠어요.</string>
    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="select_vocabulary">단어장 선택</string>
    <string name="notification_frequency">알림 빈도</string>
    <string name="notification">알림</string>
    <string name="notification_setting">알림 설정</string>
    <string name="background_dictionary_search">백그라운드 사전 검색</string>
    <string name="count">개</string>
    <string name="word_quiz">단어 퀴즈</string>
    <string name="setting">설정</string>
    <string name="choice_language">언어 선택</string>
    <string name="quiz">quiz</string>
    <string name="home">home</string>
    <string name="all_select">전체선택</string>
</resources>