<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="co.kr.dgsw.searchvoca.viewmodel.fragment.UpdateWordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/update_layout_padding_horizontal"
        android:paddingTop="@dimen/update_layout_padding_top">

        <EditText
            android:id="@+id/et_word"
            style="@style/AddEditText"
            onDrawableEndClick="@{()->vm.wordSearch()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_search"
            android:focusable="true"
            android:hint="@string/word"
            android:text="@={vm.word}" />

        <EditText
            android:id="@+id/et_meaning"
            style="@style/AddEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meaning"
            android:text="@={vm.meaning}" />

        <EditText
            android:id="@+id/et_choice_vocabulary"
            style="@style/AddEditText"
            onTouchThrottled="@{()->vm.showVocabularyDialog()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_bottom"
            android:hint="@string/choice_vocabulary"
            android:text="@{vm.vocabulary.name}" />
    </LinearLayout>
</layout>