<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="co.kr.searchvoca.ui.quiz.QuizViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.quiz.QuizFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/word_quiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <co.kr.searchvoca.shared.android.component.QuizCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardIcon="@drawable/ic_sound"
                app:onClickThrottled="@{() -> vm.onListeningTestClicked()}"
                app:title="@string/listening_test" />

            <co.kr.searchvoca.shared.android.component.QuizCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardIcon="@drawable/ic_card"
                app:onClickThrottled="@{() -> vm.onCardTestClicked()}"
                app:title="@string/word_card" />
        </LinearLayout>
    </LinearLayout>
</layout>