<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="co.kr.dgsw.searchvoca.ui.vocabulary.UpdateVocabularyViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.vocabulary.UpdateVocabularyFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/toolbar_add"
            app:navigationIcon="@drawable/ic_arrow_left"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <EditText
            android:id="@+id/et_word"
            style="@style/AddEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/vocabulary_name_require"
            android:text="@={vm.name}" />

        <EditText
            android:id="@+id/et_meaning"
            style="@style/AddEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/explaining"
            android:text="@={vm.explaining}" />

        <EditText
            android:id="@+id/et_choice_vocabulary"
            style="@style/AddEditText"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_bottom"
            android:hint="@string/choice_language" />

    </LinearLayout>
</layout>