<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="co.kr.dgsw.searchvoca.viewmodel.fragment.ListeningTestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.ListeningTestFragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            enabledNotEmpty="@{vm.userAnswer}"
            onClickThrottled="@{()->vm.checkAnswer()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_sound"
            onClickThrottled="@{()->vm.playTTS()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:contentPadding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:strokeColor="@color/gray1"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_sound"
                app:tint="@{vm.soundEnabled ? @color/sound_none : @color/sound_highlight}" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="@color/gray1"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_sound">

            <EditText
                android:id="@+id/et_answer"
                style="@style/BigTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="14"
                android:gravity="center"
                android:hint="@string/input_your_answer"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="3dp"
                android:paddingBottom="16dp"
                android:text="@={vm.userAnswer}"
                tools:layout_editor_absoluteX="101dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView13"
            style="@style/NextWordTextView"
            onClickThrottled="@{()->vm.showNextWord(false)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/do_not_know"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView12"
            style="@style/BoldTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="단어를 듣고 단어의 음을 입력해주세요!"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>